[metadata]
name = hetnetpy
maintainer = Daniel Himmelstein
maintainer_email = daniel.himmelstein@gmail.com
license = CC0 1.0
license_file = LICENSE-CC0.md
description =  Hetnets in Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/hetio/hetnetpy
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
keywords =
    hetnet
    graph
    heterogeneous
    network
    neo4j
    hetio
    hetnetpy
    dwpc
    rephetio

[options]
packages = find:
python_requires = >=3.7
install_requires =
    regex

[options.extras_require]
test =
    neo4j
    numpy
    pandas
    py2neo
    pytest
    scipy
    tqdm
stats =
    pandas
    matplotlib
    seaborn
neo4j =
    pandas
    py2neo
    tqdm
matrix =
    numpy
    scipy

[options.packages.find]
exclude =
    test

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
